--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,38 @@
 */
 
 @import url('./reset.css');
+
+.feedback-form {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.feedback-form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.feedback-form input[type="email"],
+.feedback-form textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.feedback-form textarea {
+  resize: vertical; /* Дозволяємо розширення в вертикальному напрямку */
+}
+
+.feedback-form button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.feedback-form button:hover {
+  background-color: #0056b3;
+}
